about section done

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               </div>
            </section>
     </header>
-    <main class="md:container mx-auto  bg-slate-200">
+    <main class="md:container mx-auto  bg-slate-200 pb-24">
 
         <!-- we design section -->
         <section class=" py-24 sm:w-full sm:px-auto mt-24">
@@ -302,6 +302,33 @@
         </section>
 
  
+<!-- about section -->
+
+ <section class=" ">
+  
+  <div class="hero bg-base-200 min-h-screen pb-20 ">
+ 
+    <div class="hero-content flex-col lg:flex-row">
+      <img
+        src="./assets/about_act_img.jpg"
+        class="max-w-sm rounded-lg shadow-2xl" />
+      <div>
+
+        <h1 class="text-5xl font-bold">Daisy Architect | About us</h1>
+        <p class="py-6">
+          At Daisy Architect Architecture & Development, our commitment lies in delivering unparalleled value to our esteemed clientele. Our expertise revolves around innovative strategies that unlock the inherent potential within residences and development sites. Through a personalized and comprehensive multi-disciplinary approach, we assume complete control of the entire process – from navigating the intricacies of planning permissions to overseeing construction and the final handover.
+        </p>
+        <p>Our foremost objective centres on crafting thoughtfully designed homes that impeccably align with the unique preferences of each client. Our portfolio spans an array of projects, encompassing residential extensions, loft conversions, and the development of new sites. Each undertaking is embraced with a receptive mindset, leveraging our accumulated wisdom to unearth the optimal design solution for both the project and the client.</p>
+        <h2 class=" text-xl font-bold mt-5">Recent Awards</h2>
+        <p>BUILD – Leading Architectural Design Studio Specialising in Innovative Residential, Commercial and Conservation Projects, 2022</p>
+        <p>BUILD – Most Innovative Residential Design Practice, 2021</p>
+        
+      </div>
+    </div>
+  </div>
+ </section>
+
+
 
 
    <!-- form section       -->
@@ -342,7 +369,7 @@
     </main>
 
     
-    <footer class="footer footer-center bg-[#1C1C1C] text-primary-content p-10">
+    <footer class="footer footer-center bg-[#1C1C1C] text-primary-content p-10 ">
       <aside>
         <div class=" ">
           <a class="btn btn-ghost  "> <span class="w-8 text-xl h-8 rounded-full bg-[#c2f28c]"><i class="fa-solid fa-arrow-right-long text-black -rotate-45"></i> </span><span class=" text-2xl font-bold"> Rinterio</span></a>
